# ebds

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ebds.yml
fuzz/: Cargo.toml
fuzz/dictionary/: method.dict  omnibus_reply.dict
fuzz/fuzz_targets/: fuzz_build_message.rs  fuzz_method.rs  fuzz_omnibus_reply.rs  fuzz_omnibus_reply_from_bytes.rs
scripts/: fuzz-runner.sh
src/: advanced_bookmark_mode.rs  aux_command.rs  banknote.rs  cash.rs  clear_audit_data.rs  denomination.rs  error.rs  extended_command.rs  extended_note_inhibits.rs  extended_note_specification.rs  extended_reply.rs  flash_download.rs  hardware.rs  jsonrpc.rs  len.rs  lib.rs  logging.rs  macros.rs  method.rs  note_retrieved.rs  omnibus.rs  part_number.rs  soft_reset.rs  status.rs  variant.rs
src/advanced_bookmark_mode/: command.rs  reply.rs
src/clear_audit_data/: reply.rs  request.rs
src/extended_note_inhibits/: command.rs  reply.rs
src/extended_note_specification/: query.rs  reply.rs
src/flash_download/: baud_rate.rs  message_7bit.rs  message_8bit.rs  reply_7bit.rs  reply_8bit.rs  start_download.rs
src/flash_download/start_download/: command.rs  reply.rs
src/note_retrieved/: command.rs  reply.rs
src/omnibus/: command.rs  reply.rs
src/query_application_id/: command.rs  reply.rs
src/query_application_part_number/: command.rs  reply.rs
src/query_boot_part_number/: command.rs  reply.rs
src/query_device_capabilities/: command.rs  reply.rs
src/query_software_crc/: command.rs  reply.rs
src/query_value_table/: command.rs  reply.rs
src/query_variant_id/: command.rs  reply.rs
src/query_variant_name/: command.rs  reply.rs
src/query_variant_part_number/: command.rs  reply.rs
src/set_escrow_timeout/: command.rs  reply.rs
src/status/: document_status.rs
src/variant/: command.rs  reply.rs
